feat: implement initial support for generic types, methods, classes, structs, and traits